<resources>
    <string name="app_name">demo</string>
    <string name="app_title">HeAR Demo</string>

    <string
        name="instruction_heading"
    >Pre-screen a cough to identify likely causes with a 5 second audio clip.</string>
    <string
        name="instruction_body"
    >1. Allow permissions to record audio\n2. Hold phone 5 inches away from face\n3. Record for 5 seconds while coughing</string>
    <string name="get_started_button_text">Get started</string>

    <string name="record_heading">Record your cough</string>
    <string
        name="record_body"
    >Pre-screen a cough to identify likely causes with a 5 second audio clip.</string>
    <string name="record_button">Start recording</string>

    <string name="recording_heading">Recording...</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="submit_button_text">Submit</string>
    <string name="review_button_text">Review recording</string>
</resources>
